# featurepy

./: .gitignore  .gitmodules  pyproject.toml
examples/: test.py  test_parsing.py
examples/flask_example/: .gitignore  app.py  feature_model.yml
examples/flask_example/addAuthor/: feature.py
examples/flask_example/addDelete/: feature.py
examples/flask_example/messageBoard/: __init__.py  app_factory.py  cli.py
examples/graph_example/: config.equation  feature_model.yml  fixtures.py  main.py  test_basic.py  test_graph.py  test_simple.py  test_yml.py
examples/graph_example/basicGraph/: graph.py  test_graph.py
examples/graph_example/breadthFirstSearch/: feature.py
examples/graph_example/cycleDetection/: feature.py
examples/graph_example/directedGraph/: feature.py
examples/graph_example/minimumSpanningTree/: feature.py
examples/graph_example/search/: feature.py
examples/graph_example/shortestPath/: feature.py
examples/graph_example/simpleGraph/: __init__.py  feature.py
examples/graph_example/vertexNumbering/: feature.py
examples/graph_example/weightedGraph/: feature.py
flask_example/: app.py  config.equation
flask_example/addAuthor/: feature.py
flask_example/addDelete/: feature.py
flask_example/messageBoard/: app_factory.py  feature.py  main.py
flask_example/messageBoard/factories/: messageFactory.py
graph_example/: config.equation  main.py
graph_example/basicGraph/: feature.py  graph.py
graph_example/simpleGraph/: feature.py
src/featurepy/: feature_class.py  model_constraints.py
src/fopy/: __init__.py
(+10 files in other folders)
