[tool.poetry]
name = "fopy"
version = "0.1.0"
description = ""
authors = ["Adrian Wong <adrianwong227@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aspectlib = {git = "https://github.com/N00bAdrian/python-aspectlib.git"}

[tool.poetry.scripts]
newfeature = "fopy.scripts.features:newfeature"

[tool.poetry.group.example.dependencies]
flask = "^2.3.2"
wtforms = "^3.0.1"
beautifulsoup4 = "^4.12.2"
flask-sqlalchemy = "^3.0.3"
factory-boy = "^3.2.1"
bootstrap-flask = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
